--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <p>hello world 12</p>
+    <p>This is message from majid waiting to merge to main branch!!!</p>
 </body>
 </html>
